# monster-realm

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json.example  .npmrc  .tool-versions  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN-m13.5h.md  README.md  biome.json  cliff.toml  clippy.toml  justfile  lefthook.yml  m13.5r-plan.md  package-lock.json  renovate.json
.cargo/: mutants.toml
.claude/: settings.json
.claude/agents/: tester.md
.claude/hooks/: format-edited.mjs  guard-bash.mjs  okf-lint.mjs  research-index.mjs  research-lint.mjs
.claude/skills/: netcode-smoothness.md  spacetimedb-reducer.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  nightly.yml
.m8c/: PLAN-v2-resolutions.md  PLAN.md
client/: .npmrc  index.html  node_modules  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
client-wasm/: Cargo.toml  pkg
client-wasm/src/: lib.rs
client/art-src/: README.md  generate_art.py
client/e2e/: dialogue.spec.ts  global-setup.ts  golden.spec.ts  presence.spec.ts  pvp-full.spec.ts  pvp.spec.ts  ranked-forfeit.spec.ts  recruit.spec.ts  (+6 more)
docs/: PLAYTEST.md  fix-nightly-census.txt  fix-nightly-plan.md  m11a-plan.md  m11b-plan.md  m12.5a-plan.md  m12.5c-plan.md  m12.5e2-plan.md  m12a-plan.md  m12b-plan.md  m12c-plan.md  m12d-plan.md  m14.5d-plan.md  m8.5c-plan.md  m8.5d-plan.md  m8.5f-plan.md  m8.6a-plan.md  m8.6b-plan.md  m8.6c-plan.md  m8.7a-plan.md  m8.7b-plan.md  m8.7d-plan.md  m8.7e-plan.md  playtest-ops.md  validation-findings.md
evals/: adr-digest.eval.mjs  append-only-ids.eval.mjs  battle-lifecycle-gc.eval.mjs  battle-reducer-security.eval.mjs  battle-schema-snapshot.eval.mjs  bindings-drift.eval.mjs  box-view-privacy.eval.mjs  bsatn-compat-smoke.eval.mjs  build-ci-hygiene.eval.mjs  cache-freshness.eval.mjs  ci-gate-wiring.eval.mjs  content-version-teeth.eval.mjs  content-version.eval.mjs  conversation-privacy.eval.mjs  currency-integrity.eval.mjs  determinism-fail-loud.eval.mjs  dev-reducer-gating.eval.mjs  dev-reducer-zone-arg-discipline.eval.mjs  dialogue-client-integrity.eval.mjs  dom-shell-coverage-exclusion.eval.mjs  e2e-desync-teeth.eval.mjs  economy-sinks-sources.eval.mjs  encounter-privacy.eval.mjs  evolution-fusion-content-integrity.eval.mjs  evolution-reducer-security.eval.mjs  feature-isolation.eval.mjs  gate-hardening-config.eval.mjs  gate-teeth.eval.mjs  inventory-privacy.eval.mjs  inventory-single-stack.eval.mjs  js-path-parity.eval.mjs  knowledge-bundle-conformance.eval.mjs  migration-smoke-test.eval.mjs  monster-dual-write.eval.mjs  monster-privacy.eval.mjs  movement-parity.eval.mjs  mutate-core-recipe-integrity.eval.mjs  netcode-convergence.eval.mjs  netcode-determinism.eval.mjs  nightly-smoke-wiring.eval.mjs  (+29 more)
evals/determinism-teeth/: Cargo.toml
evals/determinism-teeth/src/: lib.rs
evals/release-overflow-teeth/: Cargo.toml
evals/release-overflow-teeth/src/: lib.rs
game-core/: Cargo.toml  build.rs
game-core/content/: encounters.ron  evolutions.ron  fusion.ron  items.ron  skills.ron  species.ron  type_chart.ron  zones.ron
game-core/content/abilities/: 000-core.ron
game-core/content/dialogue_trees/: 000-core.ron
game-core/content/heal_locations/: 000-core.ron
game-core/content/items/: 000-core.ron
game-core/content/npcs/: 000-core.ron
game-core/content/quests/: 000-core.ron
game-core/content/shops/: 000-core.ron
game-core/content/skills/: 000-core.ron
game-core/content/species/: 000-core.ron  010-derived.ron
game-core/content/zone_maps/: 000-core.ron
game-core/proptest-regressions/: currency.txt
game-core/proptest-regressions/combat/: damage.txt  resolve.txt  type_chart.txt  xp.txt
game-core/proptest-regressions/evolution/: m10a_gating_tests.txt
game-core/proptest-regressions/monster/: rolls.txt  rules.txt
game-core/proptest-regressions/npc/: m12a_gating_tests.txt
game-core/src/: content.rs  currency.rs  lib.rs  m8c_gating_tests.rs  ranking.rs  types.rs  world.rs
game-core/src/combat/: ability.rs  ai.rs  damage.rs  m14_5b_tests.rs  m14_5c_tests.rs  m14_5h_tests.rs  m14a_tests.rs  m14b_tests.rs  m14c_tests.rs  m14d_tests.rs  m14e_tests.rs  m7b_gating_tests.rs  m7b_redteam_tests.rs  mod.rs  pvp.rs  redteam_m14_5a_tests.rs  redteam_m14a_tests.rs  redteam_m14c_tests.rs  redteam_m14d_tests.rs  redteam_m14d_weather_desync.rs  redteam_m14e_tests.rs  redteam_m8d_tests.rs  redteam_new_findings.rs  resolve.rs  status.rs  type_chart.rs  types.rs  weather.rs  xp.rs
game-core/src/dialogue/: m12a_gating_tests.rs  mod.rs  model.rs  rules.rs
game-core/src/evolution/: eligibility.rs  m10a_gating_tests.rs  mod.rs  transform.rs
game-core/src/monster/: battle_redteam_tests.rs  m8d_gating_tests.rs  mod.rs  rolls.rs  rules.rs  types.rs
game-core/src/npc/: m12a_gating_tests.rs  mod.rs  rules.rs
game-core/src/quest/: m12a_gating_tests.rs  mod.rs  model.rs  rules.rs
game-core/src/raising/: m9a_gating_tests.rs  mod.rs  rules.rs  types.rs
game-core/src/taming/: m8a_gating_tests.rs  mod.rs  rules.rs  types.rs
game-core/src/trading/: mod.rs  rules.rs  types.rs
game-core/tests/: tiled_import_cli.rs
scripts/: adr-digest.mjs  backfill-adr-headers.mjs  check-commit-msg.mjs  check-secrets.mjs  okf-export.mjs  playtest-report.mjs  smoke-republish.sh  verify-build-hooks.mjs  verify-release-reducers.mjs  wire-pixijs-skills.mjs
server/: Cargo.toml
server-module/: Cargo.toml
server-module/src/: battle.rs  battle_tests.rs  content.rs  content_cache.rs  content_cache_tests.rs  content_tests.rs  economy.rs  economy_tests.rs  evolution.rs  evolution_tests.rs  guards.rs  guards_tests.rs  inventory.rs  lib.rs  m14_5d_1a_tests.rs  marshal.rs  marshal_tests.rs  monster_mgmt.rs  movement.rs  npc.rs  npc_tests.rs  playtest.rs  playtest_tests.rs  pvp.rs  pvp_tests.rs  raising.rs  raising_tests.rs  ranking.rs  ranking_tests.rs  schema.rs  taming.rs  taming_tests.rs  trading.rs  trading_tests.rs
server/src/: lib.rs
sim-harness/: Cargo.toml
(+413 files in other folders)
