# monster-realm — cargo workspace (ADR-0005 single repo).
# `resolver = "2"` keeps per-crate feature sets from leaking across the graph —
# the structural half of feature-isolation (the eval is the proof, ADR-0003).
[workspace]
resolver = "2"
members = ["game-core", "client-wasm", "server-module", "sim-harness"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

# SSOT for shared dependency versions: declare once here, reference with
# `dep.workspace = true` in members. Populated as crates take real deps —
# spacetimedb (M2, matched to the installed CLI 2.6.0; crate ≠ product version),
# proptest / criterion land with the test-tooling slice + their ADR.
[workspace.dependencies]
# The client-prediction wasm boundary (ADR-0036), built via wasm-pack.
wasm-bindgen = "0.2"
# Server module SDK (ADR-0037) — crate 1.12 matches CLI 2.6.0 (crate != product).
spacetimedb = "1.12"
# Content: serde derive + RON parser (pure; safe under the determinism guard).
serde = { version = "1", features = ["derive"] }
ron = "0.8"
