# monster-realm — cargo workspace (ADR-0005 single repo).
# `resolver = "2"` keeps per-crate feature sets from leaking across the graph —
# the structural half of feature-isolation (the eval is the proof, ADR-0003).
[workspace]
resolver = "2"
members = ["game-core", "client-wasm", "server-module", "sim-harness", "evals/release-overflow-teeth"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

# SSOT for shared dependency versions: declare once here, reference with
# `dep.workspace = true` in members. Populated as crates take real deps —
# spacetimedb (M2, matched to the installed CLI 2.6.0; crate ≠ product version),
# proptest / criterion land with the test-tooling slice + their ADR.
[workspace.dependencies]
# The client-prediction wasm boundary (ADR-0036), built via wasm-pack.
wasm-bindgen = "0.2"
# M3 marshaling boundary (ADR-0036): JS<->serde value bridge for the consumable
# `apply_move`/`zone_map` exports, plus a browser panic hook. Pure marshaling —
# the no-logic-in-wrapper eval proves no rules cross here.
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
# Server module SDK (ADR-0037) — crate 1.12 matches CLI 2.6.0 (crate != product).
spacetimedb = "1.12"
# Content: serde derive + RON parser (pure; safe under the determinism guard).
serde = { version = "1", features = ["derive"] }
ron = "0.8"
# Property testing for the logic-heavy rules (ADR-0038).
proptest = "1"
# Structured logging facade (captured by the SpacetimeDB host) — server-module dep.
log = "0.4"

# Release/bench fail-loud (ADR-0003 / ADR-0055): shipped release + bench artifacts
# (the wasm prediction pkg, the SpacetimeDB cdylib, criterion benches) must PANIC on
# integer overflow rather than silently wrap, so debug/test and release agree on
# behavior. Profiles are honored only at the workspace root.
[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
