[package]
name = "client-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# cdylib: the wasm artifact wasm-pack builds for the browser/node.
# rlib: lets the same exports be unit-tested + driven on the host.
crate-type = ["cdylib", "rlib"]

[dependencies]
# game-core WITHOUT the `spacetimedb` feature — the client must never pull a
# server-only dependency (the feature-isolation eval makes this mechanical).
game-core = { path = "../game-core" }
wasm-bindgen = { workspace = true }
