[package]
name = "client-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# cdylib: the wasm artifact wasm-pack builds for the browser/node.
# rlib: lets the same exports be unit-tested + driven on the host.
crate-type = ["cdylib", "rlib"]

[dependencies]
# game-core WITHOUT the `spacetimedb` feature — the client must never pull a
# server-only dependency (the feature-isolation eval makes this mechanical).
game-core = { path = "../game-core" }
wasm-bindgen = { workspace = true }
# Marshaling boundary + browser panic hook (M3). serde_wasm_bindgen translates
# JS values <-> game-core's serde types; no game rules live here.
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
