[package]
name = "game-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# `SpacetimeType` derives are enabled ONLY by `server-module` (the STDB shell),
# never by `client-wasm` — the feature-isolation eval proves it. Enabling pulls
# the optional `spacetimedb` dep (for the derive macro).
default = []
spacetimedb = ["dep:spacetimedb"]

[dependencies]
serde = { workspace = true }
ron = { workspace = true }
spacetimedb = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
