[package]
name = "monster-realm-module"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# cdylib: the SpacetimeDB module (wasm) artifact; rlib lets the pure helpers be
# unit-tested off-instance.
crate-type = ["cdylib", "rlib"]

[dependencies]
# The pure rule layer (SSOT). The server runs the SAME code the client predicts
# with; the `spacetimedb` feature enables game-core's SpacetimeType derives (M6).
game-core = { path = "../game-core", features = ["spacetimedb"] }
# SpacetimeDB module SDK — crate 1.12 matches the installed CLI 2.6.0 (crate
# version != product version; confirmed against the v1 reference).
spacetimedb = { workspace = true }
# Structured logging facade (captured by the SpacetimeDB host).
log.workspace = true

[features]
# Dev/test-only reducers (start_wild_battle, grant_bait), OFF in release/publish
# (ADR-0054). Enable for the recruit e2e via a pre-built wasm + `spacetime publish
# --bin-path` (no CLI feature passthrough exists). Never add to `default`.
dev_reducers = []
