[package]
name = "monster-realm-module"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Match the SpacetimeDB version you publish against (the docs target 2.x).
# Uncomment when you implement tables/reducers (see src/lib.rs sketch). Version-specific.
# spacetimedb = "2"
